--- a/frontend/src/routes/index.main.css
+++ b/frontend/src/routes/index.main.css
@@ -1,9 +1,27 @@
-/* font-family: 'PT Sans', sans-serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Staatliches',
-cursive; */
+li {
+    padding-left: 1.2375em;
+}
 
-/* font-family: 'Fira Sans', sans-serif; */
+a {
+    outline: none;
+    text-decoration: none;
+}
+
+a:link {
+    color: hsl(36, 65%, 54%);
+    background: hsl(217, 70%, 32%);
+}
+
+a:visited {}
+
+a:focus {}
+
+a:hover {
+    color: hsl(217, 70%, 32%);
+    background: hsl(36, 65%, 54%);
+}
+
+a:active {}
 
 .full-page {
     width: 100vw;
@@ -15,62 +33,82 @@ cursive; */
     height: 100%;
 }
 
-.modular-grid {
+.vertical {
+    flex-direction: column;
+}
+
+.horizontal {
+    flex-direction: row;
+}
+
+.grid {
     display: grid;
 }
 
-.modular-grid.container {
+.grid.col-12-row-4 {
     grid-template-columns: 10% repeat(10, 1fr) 10%;
     grid-template-rows: 10% 1fr 2fr 10%;
     grid-gap: 0.2em;
 }
 
-.modular-grid.paragraphs {
+.grid.col-1-row-fluid {
     grid-template-columns: 100%;
     grid-auto-rows: minmax(min-content, max-content);
     grid-gap: 0.5em;
 }
 
-.page-text {
-    /* color: hsl(0, 0%, 100%); */
-    color: hsl(36, 65%, 54%);
-    line-height: 1.2;
-}
-
-.page-bg {
+.light.background {
     background: hsl(36, 65%, 54%);
-    z-index: 2;
-}
-
-.content-bg {
-    background: hsl(217, 70%, 32%);
     z-index: 0;
 }
 
-.paragraphs {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    padding-left: 0.5em;
-    padding-right: 1.375em;
+.dark.background {
+    background: hsl(217, 70%, 32%);
+    z-index: 2;
 }
 
-.title {
+.dark.background.bordered {
+    border-top: solid 0.15em hsl(217, 69%, 21%);
+    border-right: solid 0.15em hsl(217, 69%, 21%);
+    border-bottom: solid 0.05em hsl(217, 74%, 87%);
+    border-left: solid 0.05em hsl(217, 74%, 87%);
+}
+
+.title,
+.paragraph {
+    color: hsl(36, 65%, 54%);
+}
+
+.title.padded {
     padding-top: 0.1em;
     padding-bottom: 0.375em;
     padding-left: 0.5em;
     padding-right: 0.375em;
 }
 
-.page-text.title {
+.title.font {
     font-family: 'Fira Sans', sans-serif;
     font-weight: 900;
+    letter-spacing: 0.125em;
 }
 
-.paragraph-font {
+.paragraph.font {
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
+    line-height: 1.2;
 }
 
-li {
-    padding-left: 1.2375em;
+.paragraph.gap {
+    padding-bottom: 0.5em;
+}
+
+.paragraphs {
+    display: flex;
+}
+
+.paragraphs.padded {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 0.85em;
+    padding-right: 1.375em;
 }
